--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "author": "Aaron <aaron.kendall@wonderbill.com>",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node src/index.js"
+    "start": "node ./build/index.js",
+    "dev": "babel-node src/index.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-babel"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "prettier": "^2.0.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
